--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -74,8 +74,8 @@ body {
     margin-bottom: 100px;
 }
 .line2 {
-    margin-left:700px;
-    margin-right:700px;
+    width: 100px;
+    margin: auto;
     border-top: 3px solid#5ab3e3;
     margin-bottom: 75px;
 }
