--- a/css/assignment1.css
+++ b/css/assignment1.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 .button {
     text-decoration: none;
     color: #ffffff;
@@ -21,10 +24,10 @@
 }
 
 .line2 {
-    margin-left: 700px;
-    margin-right: 700px;
+    margin-left: 550px;
+    margin-right: 550px;
     border-top: 3px solid#5ab3e3;
-    margin-bottom: 75px;
+    margin-bottom: 5px;
 }
 
 .assignment {
