--- a/css/universityinfrastructure.css
+++ b/css/universityinfrastructure.css
@@ -55,11 +55,13 @@ body {
 
 .header {
     background-color: white;
+    margin-bottom: 20px;
 }
 
 .table {
     border-radius: 18px;
     margin-top: 35px;
+    width: 50px;
 }
 
 #bradius {
@@ -98,13 +100,10 @@ body {
 }
 
 .divtbl {
-    width: 77%;
+    width: 70%;
     padding-bottom: 45px;
     background-color: aliceblue;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    margin-left: 12%;
-    margin-right: 20%;
+    margin: auto;
     border-radius: 18px;
 }
