--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -1,3 +1,7 @@
+#submittedto {
+    font-weight: bolder;
+    text-decoration: none;
+}
 body {
     background-color: #c8cdcf;
     color: #0c0c0c;
