--- a/css/universityinfrastructure.css
+++ b/css/universityinfrastructure.css
@@ -4,7 +4,7 @@ body {
     color: #0c0c0c;
     margin: 0px;
     padding: 0px;
-    background-image: url("/img/Computer lab.jfif");
+    background-image: url("img/Computer lab.jfif");
     background-repeat: no-repeat;
     background-size: cover;
 
